Fix the pause() method toggling pause state for VLC backend

This method should pause the audio. Instead, the VLC backend would
toggle the pause state, i.e. it would start playing again if the audio
stream was already paused.  This caused issues with already paused
streams incorrectly resuming playback after the system woke up from
suspend.

BUG: 474432